# lenex-rs

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: code_style.yml  tests.yaml
src/: collection.rs  error.rs  file.rs  lib.rs  util.rs
src/model/: age_date.rs  age_group.rs  athlete.rs  club.rs  course.rs  entry.rs  event.rs  fee.rs  gender.rs  lenex.rs  meet.rs  mod.rs  pool.rs  round.rs  session.rs  stroke.rs  swimstyle.rs  timing.rs
src/model/age_group/: calculate.rs
src/serialization/: mod.rs
