[package]
name = "lenex-rs"
version = "0.1.0"
edition = "2021"
description = "Parse and generate lenex documents."
license = "MIT"
repository = "https://github.com/francisbr/lenex-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
fast-xml = { version = "0.23.1", features = ["serialize"] }
zip = "0.6.3"

thiserror = "1.0.57"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
